--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
       <div class="container">
 
         <p class="copyright">
-          &copy; 2022 Cryptex All Rights Reserved by <a href="#" class="copyright-link">codewithsadee</a>
+          &copy; 2024 lolavieshares All Rights Reserved by <a href="#" class="copyright-link">codewithsadee</a>
         </p>
 
         <ul class="social-list">
